2022-03-16  Brent Fulgham  <bfulgham@apple.com>

        CoreIPC Hardening: Add user gesture check when saving images
        https://bugs.webkit.org/show_bug.cgi?id=237839
        <rdar://72058321>

        Reviewed by Chris Dumez.

        Add check to confirm that attempts to store images in the user's Photo
        Library and attempts to store data in the pasteboard were triggered by
        a user gesture.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::writePromisedAttachmentToPasteboard): Message check the authorization token before
        performing the write.
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in:
        * UIProcess/ios/WebPageProxyIOS.mm:
        (WebKit::WebPageProxy::isValidPerformActionOnElementAuthorizationToken const): Added.
        (WebKit::WebPageProxy::performActionOnElement): Added.
        (WebKit::WebPageProxy::saveImageToLibrary): Message check the authorization token before
        performing the save.
        * WebProcess/WebPage/WebPage.h:
        * WebProcess/WebPage/WebPage.messages.in:
        * WebProcess/WebPage/ios/WebPageIOS.mm:
        (WebKit::WebPage::performActionOnElement):

2022-03-16  Sihui Liu  <sihui_liu@apple.com>

        Do not suspend NetworkStorageManager if it is used for ephemeral session
        https://bugs.webkit.org/show_bug.cgi?id=237943

        Reviewed by Chris Dumez.

        The reason we need to suspend NetworkStorageManager when process is suspended, is that it might hold file lock 
        during its operations. NetworkStorageManager of ephemeral sessions will not hold file lock; suspending its 
        WorkQueue will only delay storage operations.

        * NetworkProcess/storage/NetworkStorageManager.cpp:
        (WebKit::NetworkStorageManager::suspend):
        (WebKit::NetworkStorageManager::resume):

2022-03-16  Fujii Hironori  <Hironori.Fujii@sony.com>
