@@ -1,3 +1,15 @@
+2022-03-16  Chris Dumez  <cdumez@apple.com>
+
+        Don't build WebPageProxy::writePromisedAttachmentToPasteboard() and its IPC on macOS
+        https://bugs.webkit.org/show_bug.cgi?id=237986
+
+        Reviewed by Brent Fulgham.
+
+        * UIProcess/WebPageProxy.cpp:
+        (WebKit::WebPageProxy::writePromisedAttachmentToPasteboard):
+        * UIProcess/WebPageProxy.h:
+        * UIProcess/WebPageProxy.messages.in:
+
 2022-03-16  Brent Fulgham  <bfulgham@apple.com>
 
         CoreIPC Hardening: Add user gesture check when saving images
